Updated manuscript with minor revisions

--- a/manuscript.Rmd
+++ b/manuscript.Rmd
@@ -53,7 +53,7 @@ lasaravia@untdf.edu.ar
 ## Abstract
 
 Ecological networks offer valuable insights into community structure, key species identification, and ecosystem management. Understanding how these networks respond to global change stressors is of increasing interest, especially along geographical gradients.
-This review summarizes potential stressor responses in marine food webs from the Southwest Atlantic to the Antarctic (45 - 78ºS), encompassing areas such as San Jorge Gulf, Beagle Channel, Burdwood Bank, Scotia Sea, Potter Cove, and the Weddell Sea in Antarctica. The objectives are: 1) to describe the structure of marine food webs along this latitudinal axis using a network approach; 2) to identify predominant global change-related stressors affecting each ecosystem; and 3) to summarize observed food web changes and hypothesize on stressor impacts. The effects of stressors were primarily reviewed at the species level.
+This review summarizes potential stressor responses in marine food webs from the Southwest Atlantic to the Antarctic (45 - 78°S), encompassing areas such as San Jorge Gulf, Beagle Channel, Burdwood Bank, Scotia Sea, Potter Cove, and the Weddell Sea in Antarctica. The objectives are: 1) to describe the structure of marine food webs along this latitudinal axis using a network approach; 2) to identify predominant global change-related stressors affecting each ecosystem; and 3) to summarize observed food web changes and hypothesize on stressor impacts. The effects of stressors were primarily reviewed at the species level.
 Alternative hypotheses for each study area were formulated considering: a) main stressors; b) impacted parameters; c) node-level species properties; and d) network-level food web properties. Global warming emerges as the most common stressor among the studied areas across the latitudinal gradient, except in the Beagle Channel and Burdwood Bank, where alien species introduction and fisheries are more influential. We offer a series of alternative hypotheses on how warming may affect the food webs. This review emphasizes the benefits of using a network approach to understand and predict stressor effects in Southern Hemisphere marine ecosystems. This approach provides a holistic understanding of ecosystems, which enhances our ability to identify key species and their interactions, offering insights for ecosystem management and conservation in the face of global change stressors.
 
 Keywords: stressors, global warming, food webs, latitudinal gradient, Southern Hemisphere
@@ -63,23 +63,21 @@ Keywords: stressors, global warming, food webs, latitudinal gradient, Southern H
 The application of a network perspective has emerged as a powerful tool to tackle the complexity of species interactions, facilitating a better understanding of the structure and functioning of ecosystems [@Belgrano2005; @Thompson2012]. Trophic networks (or food webs) allow identifying properties and key species that may be crucial for ecosystem stability, and hence important for ecosystem management and biodiversity conservation [@Thompson2012].
 There is a growing interest in understanding how ecological networks respond to environmental and anthropogenic stressors along geographical gradients [@Bauer2022; @Cirtwill2015]. Yet, only a few studies have described variation in food web structure along latitudinal gradients in marine ecosystems. The few that have come from the Global North [@Wood2015; @Kortsch2019; @Pecuchet2020], whereas no studies, nor meta-analyses, on geographical variation in marine food webs exist for the Global South (Southern Hemisphere).
 
-Here we review for the first time stressor responses of marine food webs for areas located along a Southwest Atlantic to Antarctic gradient (45 - 78ºS, Figure 1). We considered proven and expected changes in food webs driven by global change-related stressors in selected areas along this large-scale latitudinal range.
+Here we review for the first time stressor responses of marine food webs for areas located along a Southwest Atlantic to Antarctic gradient (45 - 78°S, Figure 1). We considered proven and expected changes in food webs driven by global change-related stressors in selected areas along this large-scale latitudinal range.
 The aim of this review is threefold: 1) describe the complexity and structure of marine food webs along the Southwest Atlantic to Antarctic axis from a network perspective; 2) identify the ongoing global change-related stressors for each marine ecosystem containing the food webs; and 3) review proven food web changes and elaborate on a series of alternative hypotheses on how the identified stressors might affect food web features (energy flow, stability and topology), combining information on node- and network-level properties. 
-To identify the main stressors, we performed an exploratory and configurative review instead of a systematic review [@Haddaway2015], because our objective was to formulate evidenced-based hypotheses rather than providing an exhaustive list of species-level stressors for each ecosystem.
+To identify the main stressors, we performed an exploratory and configurative review instead of a systematic review [@Haddaway2015], where we considered more than 200 peer-reviewed articles retrieved mainly from Google Scholar using keywords combining location ( "San Jorge Gulf", "Beagle Channel", "Burdwood Bank", "Scotia Sea", "Weddell Sea", "Potter Cove") and stressors ("acidification", "alien species", "climate change", "contamination", "fishery", "glacier retreat", "global warming", "ice scouring", "invasive species", "marine contaminant", "microplastics", "mercury", "pollution", "sea ice", "sea warming", "urban waste"). Additionally, we specifically searched for publications by authors we know may have conducted related studies in the area. We performed this type of review because our objective was to formulate evidenced-based hypotheses rather than providing an exhaustive list of species-level stressors for each ecosystem.
 Finally, we suggest which additional data and analyses are needed to gain insights into the stressors’ effects on food web properties in the Southwest Atlantic to Antarctic region.
-
-________________
 
 ## 2. Assessment of the food web structure and stressors in the Southwest Atlantic - Antarctic region
 
-The Southwest and the Atlantic sectors of the Southern Ocean comprise one of the most biologically productive regions of the world's oceans [@Acha2004; @Latorre2023]. The referred region extends from San Jorge Gulf (45ºS) in the Patagonian shelf to the Weddell Sea (78ºS) in the Southern Ocean and covers a well-connected oceanic area [@Matano2010; @Guihou2020].
+The Southwest and the Atlantic sectors of the Southern Ocean comprise one of the most biologically productive regions of the world's oceans [@Acha2004; @Latorre2023]. The referred region extends from San Jorge Gulf (45°S) in the Patagonian shelf to the Weddell Sea (78°S) in the Southern Ocean and covers a well-connected oceanic area [@Matano2010; @Guihou2020].
 
-Throughout this region, many studies address the ecology of predator-prey relationships but most of these studies are restricted to a few interacting species or certain components of the food web such as fish, crustaceans, and benthos (e.g., @Vinuesa2007, @Padovani2012, @Pasotti2015, @Riccialdelli2020, @Saunders2019, @Pasti2021, @Cordone2022). Only few studies consider the complexity of trophic interactions within highly resolved food webs containing hundreds of species, ranging from phytoplankton, zooplankton, benthos, fish, seabirds to whales (but see @Jacob2011, @Marina2018, @Funes2022, @Lopez-Lopez2022, @Rodriguez2022, @Marinainrev). Neglecting this complexity might lead to a misunderstanding of the structure and functioning of the ecosystems and ultimately reduce the ability to predict ecosystem responses to perturbations [@Montoya2009].
+Throughout this region, many studies address the ecology of predator-prey relationships but most of these studies are restricted to a few interacting species or certain components of the food web such as fish, crustaceans, and benthos (e.g., @Vinuesa2007, @Padovani2012, @Pasotti2015, @Riccialdelli2020, @Saunders2019, @Pasti2021, @Cordone2022). Only few studies consider the complexity of trophic interactions within highly resolved food webs containing hundreds of species, ranging from phytoplankton, zooplankton, benthos, fish, seabirds to whales (but see @Jacob2011, @Marina2018, @Funes2022, @Lopez-Lopez2022, @Rodriguez2022, @Marina2024a). Neglecting this complexity might lead to a misunderstanding of the structure and functioning of the ecosystems and ultimately reduce the ability to predict ecosystem responses to perturbations [@Montoya2009].
 
 The Southwest Atlantic - Antarctic marine biota has been and is currently subjected to a variety of stressors (e.g., sea warming, glacial retreat, ice changes, acidification, species invasion, fisheries, and contamination). Here, we consider a stressor as a global change variable if it causes a quantifiable change, irrespective of its direction (increase or decrease), in a biological response [@Orr2020]. This aligns with the framework established during the early years of the International Geosphere-Biosphere Programme (IGBP) for classifying driving forces. These driving forces are grouped into those that modify the composition of the Earth's fluid envelopes (e.g., sea warming, acidification), and those that originate as local processes but attain global importance due to their widespread impact (e.g., species invasion, fisheries) [@Vitousek1992; @Sage2020].
 Although it is well-known that multiple stressors act in concert at any given time (e.g., warming and fishery; acidification and contaminants) [@Gutt2021], to date stressor assessments have been performed individually. Moreover, the potential for interactive effects of two or more stressors (synergy or antagonism) [@Cote2016] is almost unknown for the region [@Rowlands2021].
 
-In this review, we included six large marine areas in the Southern Hemisphere for which highly-resolved empirical food webs in terms of species diversity and trophic interactions have been previously described: (1) San Jorge Gulf (~45 - 47ºS, 65 - 68ºW) [@Funes2022], (2) Beagle Channel (~54ºS, 68ºW) [@Rodriguez2022], (3) Burdwood Bank (~54ºS, 59ºW) [@Marinainrev], (4) Scotia Sea (~48 - 58ºS, 50ºW) [@Lopez-Lopez2022], (5) Potter Cove (62ºS, 58ºW, Antarctica) [@Marina2018], and (6) Weddell Sea (74 - 78ºS, 30ºW, Antarctica) [@Jacob2011; @Marina2024] (Figure 1). The geographic locations of these marine biomes span from temperate Atlantic waters to Antarctic, and are exposed to global change stressors (e.g., sea warming, glacial retreat, fishery, pollution) [@Sage2020], of which some are locally more important, e.g., fisheries in the San Jorge Gulf or glacial retreat in the Antarctic.
+In this review, we included six large marine areas in the Southern Hemisphere for which highly-resolved empirical food webs in terms of species diversity and trophic interactions have been previously described: (1) San Jorge Gulf (~45 - 47°S, 65 - 68°W) [@Funes2022], (2) Beagle Channel (~54°S, 68°W) [@Rodriguez2022], (3) Burdwood Bank (~54°S, 59°W) [@Marina2024a], (4) Scotia Sea (~48 - 58°S, 50°W) [@Lopez-Lopez2022], (5) Potter Cove (62°S, 58°W, Antarctica) [@Marina2018], and (6) Weddell Sea (74 - 78°S, 30°W, Antarctica) [@Jacob2011; @Marina2024] (Figure 1). The geographic locations of these marine biomes span from temperate Atlantic waters to Antarctic, and are exposed to global change stressors (e.g., sea warming, glacial retreat, fishery, pollution) [@Sage2020], of which some are locally more important, e.g., fisheries in the San Jorge Gulf or glacial retreat in the Antarctic.
 
 In the following subsections, we describe the complexity and structure of the mentioned marine food webs, identify the main stressors, the species (or trophic species), and the parameters affected. Table 1 summarizes the properties of the marine food webs (number of nodes, trophic interactions, connectance, path length, mean trophic level, and omnivory); Table 2 provides a list of the main stressors affecting species inhabiting each area, considering: stressors’ nature, species and parameter affected, and locality.
 
@@ -98,7 +96,7 @@ Finally, the gulf is exposed to urban and industrial pollution [@Verga2020]. In 
 
 ### 2.2 Beagle Channel
 
-Located at a more southern latitude (~54ºS, 68ºW), the Beagle Channel (Figure 1) is an interoceanic passage at the southernmost tip of South America, spanning 240 km in length and 5 km in width (~1200 $\text{km}^2$), with a depth range of 0 - 140 m. It features complex coastlines, varying bathymetry, a prevailing west-to-east circulation pattern, and a significant longitudinal gradient of glacial freshwater discharge [@Schloss2023]. @Bruno2023 suggests that locally produced suspended particulate organic matter (mostly composed of phytoplankton) and organic matter accumulated in the sediments (macroalgae-originated detritus) are the primary food sources for the marine ecosystem, as opposed to allochthonous materials.
+Located at a more southern latitude (~54°S, 68°W), the Beagle Channel (Figure 1) is an interoceanic passage at the southernmost tip of South America, spanning 240 km in length and 5 km in width (~1200 $\text{km}^2$), with a depth range of 0 - 140 m. It features complex coastlines, varying bathymetry, a prevailing west-to-east circulation pattern, and a significant longitudinal gradient of glacial freshwater discharge [@Schloss2023]. @Bruno2023 suggests that locally produced suspended particulate organic matter (mostly composed of phytoplankton) and organic matter accumulated in the sediments (macroalgae-originated detritus) are the primary food sources for the marine ecosystem, as opposed to allochthonous materials.
 
 The Beagle Channel food web includes 145 nodes and 1115 trophic interactions with a connectance of 0.05 (Table 1). This food web is hypothesized to have a wasp-waist structure (i.e., the structure and dynamics of the ecosystem are regulated primarily by mid-trophic level species), where the following species play a crucial role in the dynamics of the ecosystem: Fueguian sprat *Sprattus fuegensis*, longtail southern cod *Patagonotothen ramsayi*, black southern cod *P. tessellata*, frogmouth *Cottoperca trigloides*, and squat lobster *G. gregaria* [@Riccialdelli2020]. Moreover, the squat lobster has been identified as a species linking food web modules and connecting the entire food web [@Rodriguez2022].
 
@@ -109,9 +107,9 @@ Contaminants potentially spread through the food web, from lower to higher troph
 
 ### 2.3 Burdwood Bank
 
-The so-called Burdwood Bank ecosystem comprises Marine Protected Areas Namuncurá - Burdwood Bank I and II (~54ºS, 59ºW), meaning the shallow submarine plateau named Burdwood Bank with a 200 m isobath boundary, and a deep slope that reaches 4000 m in depth, respectively [@APN2022] (Figure 1). Physical features in the plateau are fairly stable, with salinity averaging 34 all year round and temperature ranging between 4 and 8ºC [@Acha2004]. The plateau is surrounded by steep flanks of up to 4000 m depth, protected by the Marine Protected Area Namuncurá - Burdwood Bank II (32,000 $\text{km}^2$). Intense upwelling and mixing occur in relation to the slope, entraining deep nutrient-rich waters into the photic layer [@Matano2019], and resulting in a fairly homogeneous water column both spatially and temporally [@Matano2019].
+The so-called Burdwood Bank ecosystem comprises Marine Protected Areas Namuncurá - Burdwood Bank I and II (~54°S, 59°W), meaning the shallow submarine plateau named Burdwood Bank with a 200 m isobath boundary, and a deep slope that reaches 4000 m in depth, respectively [@APN2022] (Figure 1). Physical features in the plateau are fairly stable, with salinity averaging 34 all year round and temperature ranging between 4 and 8°C [@Acha2004]. The plateau is surrounded by steep flanks of up to 4000 m depth, protected by the Marine Protected Area Namuncurá - Burdwood Bank II (32,000 $\text{km}^2$). Intense upwelling and mixing occur in relation to the slope, entraining deep nutrient-rich waters into the photic layer [@Matano2019], and resulting in a fairly homogeneous water column both spatially and temporally [@Matano2019].
 
-The Burdwood Bank food web comprises 379 nodes and 1788 interactions, with a connectance of 0.01, and an asymmetric degree distribution (i.e. most of the species have a relatively low number of interactions and few species concentrate most of them). Almost half of the consumers are omnivores (48%), and the network displays a small-world pattern [@Marinainrev] (Table 1). This network pattern implies a rapid spread of a perturbation (e.g., contaminant, population fluctuation, local extinction) throughout the food web due to a short distance among species but, at the same time, a greater resistance caused by the confinement of perturbations mainly within subnetworks as a result of a high clustering coefficient [@Bornatowski2017; @Dormann2017].
+The Burdwood Bank food web comprises 379 nodes and 1788 interactions, with a connectance of 0.01, and an asymmetric degree distribution (i.e. most of the species have a relatively low number of interactions and few species concentrate most of them). Almost half of the consumers are omnivores (48%), and the network displays a small-world pattern [@Marina2024a] (Table 1). This network pattern implies a rapid spread of a perturbation (e.g., contaminant, population fluctuation, local extinction) throughout the food web due to a short distance among species but, at the same time, a greater resistance caused by the confinement of perturbations mainly within subnetworks as a result of a high clustering coefficient [@Bornatowski2017; @Dormann2017].
 
 The main stressors reported for the ecosystem of the Marine Protected Areas Namuncurá within Burdwood Bank I and II are related to human activities such as fisheries and contamination (Table 2). Several fisheries targeting demersal fish operate in the vicinity and within the Marine Protected Areas. The fishery of the Patagonian toothfish *Dissostichus eleginoides* has gained prominence in recent years [@Allega2020; @Gorini2021]. Although these are regulated by the Argentinean government, incidental bycatches do occur, where demersal fish of the genera *Coelorinchus* and *Macrourus*, seabirds and benthic invertebrates (30+ taxa) are the most common bycatches [@Gaitan2016; @Martinez2022]. Noteworthy, among the invertebrates caught, eight species are indicator taxa of vulnerable marine ecosystems [@Gaitan2016; @Schejter2021]. However, independent assessments of these bycatches suggest no significant impact on the populations [@Gaitan2016; @Martinez2022]. Besides bycatches, seabirds are being affected by fisheries due to discards, altering their diet; the most frequently encountered species are black-browed albatross *Thalassarche melanophris*, Southern giant petrel *Macronectes giganteus*, Cape petrel *Daption capense*, Southern royal albatross *Diomedea epomophora*, Northern giant petrel *M. halli*, and white-chinned petrel *Procellaria aequinoctialis* [@Tamini2023]. Nevertheless, there is a lack of knowledge considering their role in the ecosystem and the potential joint effect of both target fish and bycatch in a broader food web framework.
 Contaminants such as microplastics and mercury occur in the water column of the Burdwood Bank ecosystem [@Cossi2021; @DiMauro2022; @Fioramonti2022]. Microplastics are distributed along the entire water column, from surface to deep waters (3-2450 m) [@DiMauro2022]. More importantly, microplastics were found in soft tissues of benthic macroinvertebrates (sea stars *Henricia obesa* and *Odontaster penicillatus*) and benthopelagic fish (*Patagonotothen guntheri* and *P. ramsayi*), which not only incorporated the contaminant from the environment through their filter-feeding system but could also get it indirectly from prey organisms already containing plastics in their tissues [@Cossi2021]. Notably, one of the contaminated species is the longtail southern cod *P. ramsayi*. This species is part of the core group of species that drive the ecosystem through the suggested wasp-waist control [@Riccialdelli2020].
@@ -120,7 +118,7 @@ Despite evidence of warming of surface, mid-water and bottom layers (100 m) in B
 
 ### 2.4 Scotia Sea
 
-The Scotia Sea is a deep-sea basin (~48 - 58ºS, 50ºW), delimited by the Drake Passage to the West and by the island complex of the Scotia Arc to the North, East, and South, with an approximate extension of 1.5 x 106 $\text{km}^2$ and a depth range of 0 - 3000 m [@Murphy2006] (Figure 1). Its oceanography is dominated by the Antarctic Circumpolar Current, which is spatially structured by frontal systems [@Whitworth1980]. The South Antarctic Circumpolar Current Front subdivides the Scotia Sea into two biogeographic regions: the Northern Scotia Sea, characterized by higher and more variable temperatures, and the Southern Scotia Sea, characterized by lower and more stable temperatures and influenced by seasonal sea ice [@Raymond2011].
+The Scotia Sea is a deep-sea basin (~48 - 58°S, 50°W), delimited by the Drake Passage to the West and by the island complex of the Scotia Arc to the North, East, and South, with an approximate extension of 1.5 x 106 $\text{km}^2$ and a depth range of 0 - 3000 m [@Murphy2006] (Figure 1). Its oceanography is dominated by the Antarctic Circumpolar Current, which is spatially structured by frontal systems [@Whitworth1980]. The South Antarctic Circumpolar Current Front subdivides the Scotia Sea into two biogeographic regions: the Northern Scotia Sea, characterized by higher and more variable temperatures, and the Southern Scotia Sea, characterized by lower and more stable temperatures and influenced by seasonal sea ice [@Raymond2011].
 
 Analysis of the Northern and Southern Scotia Sea food webs shows that the former is relatively more complex in terms of number of species and links than the latter: with more species richness (218 vs 192) and interactions (10008 vs 7241) and a slightly higher connectance (0.21 vs 0.20). Mean path length is shorter in the Northern Scotia Sea food web, whereas the Southern Scotia Sea network displays a greater proportion of omnivores and a lower mean trophic level [@Lopez-Lopez2022] (Table 1).
 
@@ -142,7 +140,7 @@ Rising temperatures leading to ice and glacial melting has also substantial impa
 
 ### 2.6 Weddell Sea (Antarctica)
 
-Located between 74 and 78ºS, the high Antarctic Weddell Sea shelf spans approximately 450 km from East to West [@Jacob2011] (Figure 1). The water depth ranges from 200 to 500 m, with shallower regions being covered by continental ice that forms the coastline along the eastern and southern parts of the Weddell Sea. The shelf area is characterized by a complex three-dimensional benthic habitat, substantial benthic biomasses, and an intermediate to high diversity [@Teixido2002].
+Located between 74 and 78°S, the high Antarctic Weddell Sea shelf spans approximately 450 km from East to West [@Jacob2011] (Figure 1). The water depth ranges from 200 to 500 m, with shallower regions being covered by continental ice that forms the coastline along the eastern and southern parts of the Weddell Sea. The shelf area is characterized by a complex three-dimensional benthic habitat, substantial benthic biomasses, and an intermediate to high diversity [@Teixido2002].
 
 The Weddell Sea food web exhibits a high level of network complexity, featuring the greatest number of nodes (490) and trophic interactions (16041) among the marine food webs of the Southern Hemisphere (Table 1). Its connectance (0.07), mean trophic level (2.62) and omnivory (51%) are intermediate compared to the other food webs (Table 1). Recently, the interaction strengths of this food web were estimated, revealing the presence of numerous weak and few strong interactions [@Marina2024].
 
@@ -163,7 +161,7 @@ San Jorge Gulf        165         1015        0.04              2.17            
 
 Beagle Channel        145         1115        0.05              2.12              2.37          0.55           @Rodriguez2022
 
-Burdwood Bank         379         1788        0.01              2.99              2.52          0.49           @Marinainrev
+Burdwood Bank         379         1788        0.01              2.99              2.52          0.49           @Marina2024a
 
 Potter Cove           110         649         0.05              2.33              2.22          0.46           @Marina2018; @Rodriguez2022
 
@@ -186,8 +184,10 @@ Next, we considered node- and network-level properties relevant to the hypothesi
 
 
 
+
 ![Conceptual diagram: from species’ stressors to food web effects. A stressor (e.g., global warming) will affect one of the following species’ characteristics: metabolism, population biomass, distribution, and diet. ‘Metabolism’ refers to any change related to metabolic rate, such as reproduction, hatching, larval development, growth and mortality, and contamination due to pollutants. ‘Population biomass’ indicates an effect at the population level, where the density/abundance is being impacted. ‘Distribution’ entails a change at the population level in the geographic space occupied by a species. ‘Diet' includes alterations in the prey items of a species at the population level. Next, we considered node- and network-level properties relevant to the hypothesized stressor effects on the food webs. At the node-level, we included: a) degree, b) trophic position, c) omnivory index, and d) relative abundance. At the network-level, we considered: a) connectance, b) path length, c) mean trophic level, and d) omnivory. Finally, we elaborate a series of competing hypotheses on how the identified stressors might affect food web features (stability, energy flow, topology), combining information on node- and network-level properties.](Figures/Figure2_StressorDiagram.png){width="6.27in"
 height="3.528in"}
+
 
 
 
@@ -248,9 +248,11 @@ Categories of affected parameters and variables: metabolism; biomass; distributi
 
 
 
+
 \elandscape
 
 \normalsize
+
 
 
 
