--- a/manuscript.tex
+++ b/manuscript.tex
@@ -105,7 +105,7 @@
 \ifLuaTeX
   \usepackage{selnolig}  % disable illegal ligatures
 \fi
-\IfFileExists{bookmark.sty}{\usepackage{bookmark}}{\usepackage{hyperref}}
+\usepackage{bookmark}
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \urlstyle{same}
 \hypersetup{
@@ -164,7 +164,7 @@ key species identification, and ecosystem management. Understanding how
 these networks respond to global change stressors is of increasing
 interest, especially along geographical gradients. This review
 summarizes potential stressor responses in marine food webs from the
-Southwest Atlantic to the Antarctic (45 - 78ºS), encompassing areas such
+Southwest Atlantic to the Antarctic (45 - 78°S), encompassing areas such
 as San Jorge Gulf, Beagle Channel, Burdwood Bank, Scotia Sea, Potter
 Cove, and the Weddell Sea in Antarctica. The objectives are: 1) to
 describe the structure of marine food webs along this latitudinal axis
@@ -209,7 +209,7 @@ webs exist for the Global South (Southern Hemisphere).
 
 Here we review for the first time stressor responses of marine food webs
 for areas located along a Southwest Atlantic to Antarctic gradient (45 -
-78ºS, Figure 1). We considered proven and expected changes in food webs
+78°S, Figure 1). We considered proven and expected changes in food webs
 driven by global change-related stressors in selected areas along this
 large-scale latitudinal range. The aim of this review is threefold: 1)
 describe the complexity and structure of marine food webs along the
@@ -221,7 +221,16 @@ identified stressors might affect food web features (energy flow,
 stability and topology), combining information on node- and
 network-level properties. To identify the main stressors, we performed
 an exploratory and configurative review instead of a systematic review
-(Haddaway et al. 2015), because our objective was to formulate
+(Haddaway et al. 2015), where we considered more than 200 peer-reviewed 
+articles retrieved mainly from Google Scholar using keywords combining 
+location ( "San Jorge Gulf", "Beagle Channel", "Burdwood Bank", "Scotia Sea", 
+"Weddell Sea", "Potter Cove") and stressors ("acidification", "alien species", 
+"climate change", "contamination", "fishery", "glacier retreat", "global warming", 
+"ice scouring", "invasive species", "marine contaminant", "microplastics", "mercury", 
+"pollution", "sea ice", "sea warming", "urban waste"). Additionally, we 
+specifically searched for publications by authors we know may have conducted 
+related studies in the area. We performed this type of review because our 
+objective was to formulate
 evidenced-based hypotheses rather than providing an exhaustive list of
 species-level stressors for each ecosystem. Finally, we suggest which
 additional data and analyses are needed to gain insights into the
@@ -235,8 +244,8 @@ region}\label{assessment-of-the-food-web-structure-and-stressors-in-the-southwes
 The Southwest and the Atlantic sectors of the Southern Ocean comprise
 one of the most biologically productive regions of the world's oceans
 (Acha et al. 2004; Latorre et al. 2023). The referred region extends
-from San Jorge Gulf (45ºS) in the Patagonian shelf to the Weddell Sea
-(78ºS) in the Southern Ocean and covers a well-connected oceanic area
+from San Jorge Gulf (45°S) in the Patagonian shelf to the Weddell Sea
+(78°S) in the Southern Ocean and covers a well-connected oceanic area
 (Matano et al. 2010; Guihou et al. 2020).
 
 Throughout this region, many studies address the ecology of
@@ -250,7 +259,7 @@ interactions within highly resolved food webs containing hundreds of
 species, ranging from phytoplankton, zooplankton, benthos, fish,
 seabirds to whales (but see Jacob et al. (2011), Marina et al. (2018),
 Funes et al. (2022), López-López et al. (2022), Rodriguez et al. (2022),
-Marina et al. (in rev.)). Neglecting this complexity might lead to a
+Marina et al. (2024b)). Neglecting this complexity might lead to a
 misunderstanding of the structure and functioning of the ecosystems and
 ultimately reduce the ability to predict ecosystem responses to
 perturbations (Montoya et al. 2009).
@@ -278,13 +287,13 @@ region (Rowlands et al. 2021).
 In this review, we included six large marine areas in the Southern
 Hemisphere for which highly-resolved empirical food webs in terms of
 species diversity and trophic interactions have been previously
-described: (1) San Jorge Gulf (\textasciitilde45 - 47ºS, 65 - 68ºW)
-(Funes et al. 2022), (2) Beagle Channel (\textasciitilde54ºS, 68ºW)
-(Rodriguez et al. 2022), (3) Burdwood Bank (\textasciitilde54ºS, 59ºW)
-(Marina et al. in rev.), (4) Scotia Sea (\textasciitilde48 - 58ºS, 50ºW)
-(López-López et al. 2022), (5) Potter Cove (62ºS, 58ºW, Antarctica)
-(Marina et al. 2018), and (6) Weddell Sea (74 - 78ºS, 30ºW, Antarctica)
-(Jacob et al. 2011; Marina et al. 2024) (Figure 1). The geographic
+described: (1) San Jorge Gulf (\textasciitilde45 - 47°S, 65 - 68°W)
+(Funes et al. 2022), (2) Beagle Channel (\textasciitilde54°S, 68°W)
+(Rodriguez et al. 2022), (3) Burdwood Bank (\textasciitilde54°S, 59°W)
+(Marina et al. 2024b), (4) Scotia Sea (\textasciitilde48 - 58°S, 50°W)
+(López-López et al. 2022), (5) Potter Cove (62°S, 58°W, Antarctica)
+(Marina et al. 2018), and (6) Weddell Sea (74 - 78°S, 30°W, Antarctica)
+(Jacob et al. 2011; Marina et al. 2024a) (Figure 1). The geographic
 locations of these marine biomes span from temperate Atlantic waters to
 Antarctic, and are exposed to global change stressors (e.g., sea
 warming, glacial retreat, fishery, pollution) (Sage 2020), of which some
@@ -397,7 +406,7 @@ otters (Garrott et al. 1993) and macroalgae (Southward and Southward
 
 \subsubsection{2.2 Beagle Channel}\label{beagle-channel}
 
-Located at a more southern latitude (\textasciitilde54ºS, 68ºW), the
+Located at a more southern latitude (\textasciitilde54°S, 68°W), the
 Beagle Channel (Figure 1) is an interoceanic passage at the southernmost
 tip of South America, spanning 240 km in length and 5 km in width
 (\textasciitilde1200 \(\text{km}^2\)), with a depth range of 0 - 140 m.
@@ -479,12 +488,12 @@ actually slightly cooling the seawater (Saraceno et al. 2022).
 \subsubsection{2.3 Burdwood Bank}\label{burdwood-bank}
 
 The so-called Burdwood Bank ecosystem comprises Marine Protected Areas
-Namuncurá - Burdwood Bank I and II (\textasciitilde54ºS, 59ºW), meaning
+Namuncurá - Burdwood Bank I and II (\textasciitilde54°S, 59°W), meaning
 the shallow submarine plateau named Burdwood Bank with a 200 m isobath
 boundary, and a deep slope that reaches 4000 m in depth, respectively
 (Administración de Parques Nacionales 2022) (Figure 1). Physical
 features in the plateau are fairly stable, with salinity averaging 34
-all year round and temperature ranging between 4 and 8ºC (Acha et al.
+all year round and temperature ranging between 4 and 8°C (Acha et al.
 2004). The plateau is surrounded by steep flanks of up to 4000 m depth,
 protected by the Marine Protected Area Namuncurá - Burdwood Bank II
 (32,000 \(\text{km}^2\)). Intense upwelling and mixing occur in relation
@@ -497,7 +506,7 @@ with a connectance of 0.01, and an asymmetric degree distribution
 (i.e.~most of the species have a relatively low number of interactions
 and few species concentrate most of them). Almost half of the consumers
 are omnivores (48\%), and the network displays a small-world pattern
-(Marina et al. in rev.) (Table 1). This network pattern implies a rapid
+(Marina et al. 2024b) (Table 1). This network pattern implies a rapid
 spread of a perturbation (e.g., contaminant, population fluctuation,
 local extinction) throughout the food web due to a short distance among
 species but, at the same time, a greater resistance caused by the
@@ -558,7 +567,7 @@ trophic interactions in Burdwood Bank are also unknown.
 
 \subsubsection{2.4 Scotia Sea}\label{scotia-sea}
 
-The Scotia Sea is a deep-sea basin (\textasciitilde48 - 58ºS, 50ºW),
+The Scotia Sea is a deep-sea basin (\textasciitilde48 - 58°S, 50°W),
 delimited by the Drake Passage to the West and by the island complex of
 the Scotia Arc to the North, East, and South, with an approximate
 extension of 1.5 x 106 \(\text{km}^2\) and a depth range of 0 - 3000 m
@@ -705,7 +714,7 @@ quality of the fatty acid composition (Latorre et al. 2023).
 \subsubsection{2.6 Weddell Sea
 (Antarctica)}\label{weddell-sea-antarctica}
 
-Located between 74 and 78ºS, the high Antarctic Weddell Sea shelf spans
+Located between 74 and 78°S, the high Antarctic Weddell Sea shelf spans
 approximately 450 km from East to West (Jacob et al. 2011) (Figure 1).
 The water depth ranges from 200 to 500 m, with shallower regions being
 covered by continental ice that forms the coastline along the eastern
@@ -720,7 +729,7 @@ Its connectance (0.07), mean trophic level (2.62) and omnivory (51\%)
 are intermediate compared to the other food webs (Table 1). Recently,
 the interaction strengths of this food web were estimated, revealing the
 presence of numerous weak and few strong interactions (Marina et al.
-2024).
+2024a).
 
 In the Weddell Sea, the main stressors are related to warming impacts
 (sea warming, sea ice extent, iceberg scouring) (Table 2), where sea
@@ -821,7 +830,7 @@ San Jorge Gulf & 165 & 1015 & 0.04 & 2.17 & 3.02 & 0.63 & Funes et al.
 Beagle Channel & 145 & 1115 & 0.05 & 2.12 & 2.37 & 0.55 & Rodriguez et
 al. (2022) \\
 Burdwood Bank & 379 & 1788 & 0.01 & 2.99 & 2.52 & 0.49 & Marina et al.
-(in rev.) \\
+(2024b) \\
 Potter Cove & 110 & 649 & 0.05 & 2.33 & 2.22 & 0.46 & Marina et al.
 (2018); Rodriguez et al. (2022) \\
 N Scotia Sea & 218 & 10008 & 0.21 & 1.87 & 3.29 & 0.73 & López-López et
@@ -2280,18 +2289,19 @@ structure and function. Estuarine, Coastal and Shelf Science
 doi:\href{https://doi.org/10.1016/j.ecss.2017.10.015}{10.1016/j.ecss.2017.10.015}.
 
 \bibitem[\citeproctext]{ref-Marina2024}
-Marina, T.I., Saravia, L.A., and Kortsch, S. 2024. New insights into the
-{Weddell Sea} ecosystem applying a quantitative network approach. Ocean
-Science \textbf{20}(1): 141--153. Copernicus GmbH.
+Marina, T.I., Saravia, L.A., and Kortsch, S. 2024a. New insights into
+the {Weddell Sea} ecosystem applying a quantitative network approach.
+Ocean Science \textbf{20}(1): 141--153. Copernicus GmbH.
 doi:\href{https://doi.org/10.5194/os-20-141-2024}{10.5194/os-20-141-2024}.
 
-\bibitem[\citeproctext]{ref-Marinainrev}
+\bibitem[\citeproctext]{ref-Marina2024a}
 Marina, T.I., Schloss, I.R., Lovrich, G.A., Boy, C.C., Bruno, D.O.,
-Capitanio, F.L., Delpiani, S.M., Díaz de Astarloa, J.M., Fraysse, C.,
+Capitanio, F.L., Delpiani, S.M., Díaz De Astarloa, J.M., Fraysse, C.,
 García Alonso, V.A., Raya Rey, A., Schejter, L., Spinelli, M., Tatián,
-M., Urteaga, D., and Riccialdelli, L. in rev. The complex network of
-trophic interactions in a {Subantarctic} oceanic {Marine Protected
+M., Urteaga, D., and Riccialdelli, L. 2024b. The complex network of
+trophic interactions in a sub-{Antarctic} oceanic {Marine Protected
 Area}. Marine Ecology Progress Series.
+doi:\href{https://doi.org/10.3354/meps14600}{10.3354/meps14600}.
 
 \bibitem[\citeproctext]{ref-Martinez2022}
 Martínez, P.A., Wöhler, O.C., Troccoli, G.H., Di Marco, E., and Maydana,
